能抓取 Excel 的資料與灌入 model 裡

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.3.4
-  filesystem_picker: ^2.0.0-nullsafety.0
+  # filesystem_picker: ^2.0.0-nullsafety.0
+  path_provider: ^2.0.2
+  file_picker: ^3.0.4
+  excel: 1.1.5
+  # excel: 2.0.0-null-safety-3
+  rxdart: ^0.27.1
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
