--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "name": "class_grades_analyzer (profile mode)",
             "request": "launch",
             "type": "dart",
+            "args": ["--no-sound-null-safety"],
             "flutterMode": "profile"
         }
     ]
