--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # excel: 2.0.0-null-safety-3
   rxdart: ^0.27.1
   get_storage: ^2.0.3
+  printing: ^5.6.0
+  pdf: 3.5.0
+
+dependency_overrides:
+  xml: ^5.0.0
+  archive: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +60,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/exams.json
+    - assets/wt001.ttf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
